# slurm_util

./: pyproject.toml
.github/workflows/: ci.yml  release.yml
src/slurm_util/: __init__.py  attach.py  info.py  sshlurm.py  submit.py  utils.py
tests/: test_job.py  test_submit.py
